# LOCC

./: CMakeLists.txt
.github/workflows/: locc-test.yml
src/: main.c
test/0/: main.c
